--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.2.4",
     "@astrojs/sitemap": "^3.3.0",
     "@fontsource-variable/open-sans": "^5.1.1",
     "@fontsource-variable/outfit": "^5.1.1",
